First Review of Final

--- a/index.html
+++ b/index.html
@@ -194,20 +194,20 @@
               />
             </div>
             <div class="person person_name_cannon">
-              <p class="person__caption">Annie Jump Cannon</p>
               <img
                 src="./images/person_cannon.png"
                 alt="Annie Jump cannon"
                 class="person__image person__image_size_m"
               />
+              <p class="person__caption">Annie Jump Cannon</p>
             </div>
             <div class="person person_name_mitchell">
-              <p class="person__caption">Maria Mitchell</p>
               <img
                 src="./images/person_mitchell.png"
                 alt="Annie Jump mitchell"
                 class="person__image person__image_size_s"
               />
+              <p class="person__caption">Maria Mitchell</p>
             </div>
           </div>
         </section>
@@ -292,7 +292,7 @@
       </main>
       <footer class="footer" id="footer">
         <div class="footer__columns">
-          <div>
+          <div class="footer__column">
             <img
               class="footer__logo"
               src="./images/logo_practicum.svg"
@@ -300,36 +300,37 @@
             />
             <p class="footer__copyright">© 2022 Cristopher Campos Lopez</p>
           </div>
-          <div class="footer__column_content_hours">
+          <div class="footer__column footer__column_content_hours">
             <h4 class="footer__column-heading">Hours</h4>
             <ul class="footer__list">
               <li class="footer__list-item">Weekdays: 9am-8pm</li>
               <li class="footer__list-item">Weekends: 10am-6pm</li>
             </ul>
           </div>
-          <div class="footer__column_content_social">
+          <div class="footer__column footer__column_content_social">
             <h4 class="footer__column-heading">Social media</h4>
-            <a class="footer__column-link" href="#">
+
             <ul class="footer__list">
               <li class="footer__list-item">
-                <img
-                  class="footer__social-icon"
-                  src="./images/facebook_white.svg"
-                  alt="facebook icon"
-                />
-                Facebook
+                <a class="footer__column-link" href="#">
+                  <img
+                    class="footer__social-icon"
+                    src="./images/facebook_white.svg"
+                    alt="facebook icon"
+                  />
+                  Facebook
+                </a>
               </li>
-            </a>
-            <a class="footer__column-link" href="#">
               <li class="footer__list-item">
-                <img
-                  class="footer__social-icon"
-                  src="./images/instagram_white.svg"
-                  alt="instagram icon"
-                />
-                Instagram
+                <a class="footer__column-link" href="#">
+                  <img
+                    class="footer__social-icon"
+                    src="./images/instagram_white.svg"
+                    alt="instagram icon"
+                  />
+                  Instagram
+                </a>
               </li>
-            </a>
             </ul>
           </div>
         </div>
